kernel/tests/data/invalid/index_not_a_type.ck
data Unit : Type where
  | mk : Unit

data Invalid : Unit.mk -> Type where